notifications page created
but navigation page have to get corrected and also count of the message have to be corrected

--- a/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".NotificationActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" /> <!-- ✅ FileProvider for attachments -->
         <provider
