--- a/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
             android:name=".NotificationActivity"
             android:exported="false" />
         <activity
+            android:name=".DebugActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" /> <!-- ✅ FileProvider for attachments -->
         <provider
