both create account issue and admin profile page issues corrected
yet to correct the message sending issue and the attachement issue

--- a/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
@@ -35,8 +35,9 @@
         <activity
             android:name=".Details"
             android:exported="false" />
-
-
+        <activity
+            android:name=".CreateAccount"
+            android:exported="false" />
         <activity
             android:name=".AdminNavActivity"
             android:exported="false" />
