Refactor OTP reset to use password_reset table
Updated backend PHP files and documentation to use the existing password_reset table instead of password_reset_otps for OTP-based password reset. Removed unused SQL and Kotlin files, added test/debug scripts, and updated AndroidManifest activity name. This streamlines the forgot password implementation and eliminates the need for a new OTP table.

--- a/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".AdminNavActivity"
             android:exported="false" />
         <activity
-            android:name=".ResetPasswordActivity"
+            android:name=".ResetPassword"
             android:exported="false" />
         <activity
             android:name=".Login"
