--- a/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
+++ b/EDUALERT_FRONTEND-main/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SubscriptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".StudentNavActivity"
             android:exported="false" />
         <activity
